# buzznode

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
.github/: CODEOWNERS
.github/workflows/: build.yml
app/: .gitignore  CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/boards/: nucleo_wl55jc.overlay
app/src/: Application.cpp  Application.hpp  bme280.cpp  bme280.hpp  lorawan.h  lorawan_handler.hpp  main.cpp  packet.h
app/src/peripherals/: peripheral.hpp
app/src/peripherals/lorawan_handler/: lorawan_handler.cpp  lorawan_handler.hpp
app/src/sensors/: sensor.hpp
app/src/sensors/bme280/: bme280.cpp  bme280.hpp
app/src/sensors/bq27441/: bq27441.cpp  bq27441.hpp
app/src/sensors/sen0308/: sen0308.cpp  sen0308.hpp
app/src/utils/: banner.hpp  hex.hpp  packet_handler.hpp  sleep-manager.cpp  sleep-manager.hpp
boards/buzzverse/: index.rst
boards/buzzverse/lora_node/: Kconfig  Kconfig.lora_node  board.yml  lora_node-pinctrl.dtsi  lora_node_procpu.dts  lora_node_procpu.yaml  lora_node_procpu_defconfig
boards/buzzverse/lora_node/doc/: index.rst
doc/: Doxyfile  conf.py
lib/: CMakeLists.txt  Kconfig
scripts/: login.py  register_device_command.py  west-commands.yml
scripts/utils/: hex.py
socs/: esp32s3_procpu.overlay
src/: main.cpp
tests/lib/custom/src/: main.c
